Fix tests after doAs removal
